--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node index",
     "dev": "nodemon index"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
